--- a/Pipfile
+++ b/Pipfile
@@ -44,6 +44,7 @@ unidecode = "*"
 sphinx-intl = "==2.1.0"
 psutil = "*"
 setproctitle = "*"
+livereload = "*"
 
 [requires]
 python_version = "3.12"
